--- a/src/_components/_layout/footer.sass
+++ b/src/_components/_layout/footer.sass
@@ -143,6 +143,10 @@ footer
 								content: 'replay'
 								font-size: 30px
 								font-family: Material Icons
+					@media screen and ( max-width: 575.98px)
+						.RadCaptcha
+							div
+								flex-direction: row
 			@media screen and ( max-width: 575.98px)
 				.form-group
 					width: 100%
