--- a/src/_components/banner/pages-banner.pug
+++ b/src/_components/banner/pages-banner.pug
@@ -1,6 +1,7 @@
 section#page-banner
 	.banner__pages
-		img(src="./assets/about/b-1.png", alt="")
+		.img
+			img(src="./assets/about/b-1.png", alt="")
 		.content
 			.container
 				h1.zone-title về chúng tôi
