--- a/src/_components/gioi-thieu/about-2.pug
+++ b/src/_components/gioi-thieu/about-2.pug
@@ -2,8 +2,8 @@ section#about-2.kv-section
 	.container
 		.caption
 			.title Lịch sử phát triển
-		.single-swiper
-			.swiper-container.product
+		.history-swiper
+			.swiper-container.history
 				.swiper-wrapper
 					.swiper-slide
 						.slide-inner
@@ -35,6 +35,7 @@ section#about-2.kv-section
 							.title 07/2003
 							.content
 								.desc Chuyển đổi hình thức sang công ty cổ phần, nhà nước giữa 51% vốn.
-			.swiper-pagination
+					
 			.swiper-button-next
 			.swiper-button-prev
+			.swiper-scrollbar.js-swiper-scrollbar
