--- a/src/_components/gioi-thieu/about-6.pug
+++ b/src/_components/gioi-thieu/about-6.pug
@@ -1,6 +1,8 @@
-section#about-6.kv-section
+section#about-6.kv-section(setBackground="../assets/about/bg-2.png")
 	.container
 		.content
+			.img
+				img(src="./assets/about/bg-2.png", alt="")
 			.caption
 				.title Phát triển bền vững
-			.desc Thực hiện tốt quy trình sản xuất sạch: thay thế các nguyên liệu gây ảnh hưởng cho môi trường bằng các nguyên liệu ít gây ảnh hưởng hoặc tác hại cho môi trường (ví dụ: Thay thế DBSA bằng LABSA, thay thế Sodium Tripoly Phosphate (STPP) bằng Zéolite).
+				.desc Thực hiện tốt quy trình sản xuất sạch: thay thế các nguyên liệu gây ảnh hưởng cho môi trường bằng các nguyên liệu ít gây ảnh hưởng hoặc tác hại cho môi trường (ví dụ: Thay thế DBSA bằng LABSA, thay thế Sodium Tripoly Phosphate (STPP) bằng Zéolite).
