--- a/src/_components/nhan-hieu-kd/nhan-hieu-kd.pug
+++ b/src/_components/nhan-hieu-kd/nhan-hieu-kd.pug
@@ -3,13 +3,13 @@ section.kv-section.list-brand-page
 		.caption
 			.title Sản phẩm nội địa
 		.brand-list.row
-			.col-lg-3.col-left
+			.col-xl-3.col-lg-4.col-md-6.col-left
 				.brand-item
 					a(href="nhan-hieu-danh-sach.html")
 						.img
 							img(src="./assets/NhanHang/z-1.png" alt="")
 						.title bột giặt
-			.col-lg-9.col-right
+			.col-xl-9.col-lg-8.col-md-6.col-right
 				.single-swiper
 					.swiper-container.product-brand
 						.swiper-wrapper
@@ -20,11 +20,12 @@ section.kv-section.list-brand-page
 											a(href="nhan-hieu-chi-tiet.html")
 												img(src="./assets/NhanHang/pro-"+i+".png" alt="")
 										.content
-											.product-title
+											.product-title.lcl.lcl-2
 												a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
 											.price-wrapper
 												.current 28.000 đ
 					.swiper-button-next
+					.swiper-button-prev
 		.brand-list.row
 			.col-lg-3.col-left
 				.brand-item
@@ -47,6 +48,7 @@ section.kv-section.list-brand-page
 												a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
 											.price-wrapper
 												.current 28.000 đ
+					.swiper-button-next
 					.swiper-button-prev
 		.brand-list.row
 			.col-lg-3.col-left
@@ -99,6 +101,7 @@ section.kv-section.list-brand-page
 												a(href="nhan-hieu-chi-tiet.html") Nước rửa chén đậm đặc NET hương chanh 4kg
 											.price-wrapper
 												.current 28.000 đ
+					.swiper-button-next
 					.swiper-button-prev
 		.brand-list.row
 			.col-lg-3.col-left
@@ -123,6 +126,7 @@ section.kv-section.list-brand-page
 											.price-wrapper
 												.current 28.000 đ
 					.swiper-button-next
+					.swiper-button-prev
 		.brand-list.row
 			.col-lg-3.col-left
 				.brand-item
