--- a/Xslt/fullpage/layout.Master
+++ b/Xslt/fullpage/layout.Master
@@ -50,28 +50,31 @@
         <div class="ov-h" id="wrapper">
             <header class="kv-header">
                 <nav class="navbar navbar-expand-lg">
-                    <portal:ModuleWrapper ID="mdl207" runat="server" ConfigureModuleId="207" />
-                    <div class="navbar-brand">
-                        <portal:ModuleWrapper ID="mdl206" runat="server" ConfigureModuleId="206" />
-                    </div>
-
-                    <portal:ModuleWrapper ID="mdl208" runat="server" ConfigureModuleId="208" />
-
-                    <div class="list-icons">
-                        <portal:ModuleWrapper ID="mdl209" runat="server" ConfigureModuleId="209" />
-                        <div class="shopping"><img src="/Data/Sites/1/skins/default/assets/icons/add-shopping.png"
-                                alt=""></div>
-                        <div class="search-icon"><img src="/Data/Sites/1/skins/default/assets/icons/search.png" alt="">
+                    <div class="container">
+                        <portal:ModuleWrapper ID="mdl207" runat="server" ConfigureModuleId="207" />
+                        <div class="navbar-brand">
+                            <portal:ModuleWrapper ID="mdl206" runat="server" ConfigureModuleId="206" />
                         </div>
-                        <div id="search-box">
-                            <div class="form-group">
-                                <portal:ModuleWrapper ID="mdl210" runat="server" ConfigureModuleId="210" />
+
+                        <portal:ModuleWrapper ID="mdl208" runat="server" ConfigureModuleId="208" />
+
+                        <div class="list-icons">
+                            <portal:ModuleWrapper ID="mdl209" runat="server" ConfigureModuleId="209" />
+                            <div class="shopping"><img src="/Data/Sites/1/skins/default/assets/icons/add-shopping.png"
+                                    alt=""></div>
+                            <div class="search-icon"><img src="/Data/Sites/1/skins/default/assets/icons/search.png"
+                                    alt="">
+                            </div>
+                            <div id="search-box">
+                                <div class="form-group">
+                                    <portal:ModuleWrapper ID="mdl210" runat="server" ConfigureModuleId="210" />
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="main-nav">
-                        <ul class="nav-mobile"></ul>
-                        <div class="kv-toggle"><span></span><span></span><span></span><span></span></div>
+                        <div class="main-nav">
+                            <ul class="nav-mobile"></ul>
+                            <div class="kv-toggle"><span></span><span></span><span></span><span></span></div>
+                        </div>
                     </div>
                 </nav>
             </header>
@@ -106,16 +109,18 @@
                                                 <h1>CÔNG TY CỔ PHẦN BỘT GIẶT NET</h1>
                                             </div>
                                             <div class="contact-info-list">
-                                                <portal:ModuleWrapper ID="mdl217" runat="server" ConfigureModuleId="217" />
+                                                <portal:ModuleWrapper ID="mdl217" runat="server"
+                                                    ConfigureModuleId="217" />
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-7">
                                         <div class="contact-right-col">
                                             <h3 class="title">liên hệ</h3>
-                                                <portal:ModuleWrapper ID="mdl218" runat="server" ConfigureModuleId="218" />
+                                            <portal:ModuleWrapper ID="mdl218" runat="server" ConfigureModuleId="218" />
                                             <div class="coppy-right">
-                                                <portal:ModuleWrapper ID="mdl219" runat="server" ConfigureModuleId="219" />
+                                                <portal:ModuleWrapper ID="mdl219" runat="server"
+                                                    ConfigureModuleId="219" />
                                             </div>
                                         </div>
                                     </div>
