--- a/src/_components/_layout/_header.pug
+++ b/src/_components/_layout/_header.pug
@@ -1,87 +1,88 @@
 header.kv-header
 	nav.navbar.navbar-expand-lg
-		ul.navbar-nav.nav-left
-			li.nav-item.active
-				a.nav-link(href="index.html") Trang chủ
-			li.nav-item
-				a.nav-link(href="gioi-thieu.html") Giới thiệu
-			li.nav-item.dropdown
-				.sub-title
-					a.nav-link(href="nhan-hieu-kinh-doanh.html") Nhãn hiệu kinh doanh
-					span.material-icons expand_more
-				ul.dropdown-menu-wrapper
-					li.dropdown-item
-						.title
-							.zone-image
-								a(href="")
-									img(src="./assets/menu-1.png", alt="")
-							a.nav-link(href="") Sản phẩm Nội địa
-							span.material-icons expand_more
-						ul.list-sub-menu
-							li
-								a(href="") Bột giặt
-							li
-								a(href="") Nước giặt
-							li
-								a(href="") Nước xả vải
-							li
-								a(href="") Nước lau sàn
-							li
-								a(href="") Nước rửa chén
-							li
-								a(href="") nước tẩy
-					li.dropdown-item
-						.title
-							.zone-image
-								a(href="")
-									img(src="./assets/menu-2.png", alt="")
-							a.nav-link(href="") Sản phẩm cung ứng
-							span.material-icons expand_more
-						ul.list-sub-menu
-							li
-								a(href="") Bột giặt
-							li
-								a(href="") Nước giặt
-							li
-								a(href="") Nước xả vải
-							li
-								a(href="") Nước lau sàn
-							li
-								a(href="") Nước vệ sinh đa năng
-							li
-								a(href="") nước tẩy
-			li.nav-item
-				a.nav-link(href="co-dong.html") Quan hệ cổ đông
-		a.navbar-brand(href="index.html")
-			img(src="./assets/logo.png", alt="")
-		ul.navbar-nav.nav-right
-			li.nav-item
-				a.nav-link(href="tin-tuc.html") Truyền thông
-			li.nav-item
-				a.nav-link(href="nha-dau-tu.html") Nhà đầu tư
-			li.nav-item
-				a.nav-link(href="tuyen-dung.html") Cơ hội việc làm
-			li.nav-item
-				a.nav-link(href="lien-he.html") Liên hệ
-		.list-icons
-			.language
-				a(href="")
-					img(src="./assets/us.gif", alt="")
-				a(href="")
-					img(src="./assets/vn.gif", alt="")
-			.shopping
-				img(src="./assets/icons/add-shopping.png", alt="")
-			.search-icon
-				img(src="./assets/icons/search.png", alt="")
-			#search-box
-				.form-group
-					input(type="text" placeholder="Tìm sản phẩm...")
-					button.searchbutton.btn.btn__search
-						em.material-icons search
-		.main-nav
-			ul.nav-mobile
-			.kv-toggle
-				span
-				span
-				span
-				span
+		.container
+			ul.navbar-nav.nav-left
+				li.nav-item.active
+					a.nav-link(href="index.html") Trang chủ
+				li.nav-item
+					a.nav-link(href="gioi-thieu.html") Giới thiệu
+				li.nav-item.dropdown
+					.sub-title
+						a.nav-link(href="nhan-hieu-kinh-doanh.html") Nhãn hiệu kinh doanh
+						span.material-icons expand_more
+					ul.dropdown-menu-wrapper
+						li.dropdown-item
+							.title
+								.zone-image
+									a(href="")
+										img(src="./assets/menu-1.png", alt="")
+								a.nav-link(href="") Sản phẩm Nội địa
+								span.material-icons expand_more
+							ul.list-sub-menu
+								li
+									a(href="") Bột giặt
+								li
+									a(href="") Nước giặt
+								li
+									a(href="") Nước xả vải
+								li
+									a(href="") Nước lau sàn
+								li
+									a(href="") Nước rửa chén
+								li
+									a(href="") nước tẩy
+						li.dropdown-item
+							.title
+								.zone-image
+									a(href="")
+										img(src="./assets/menu-2.png", alt="")
+								a.nav-link(href="") Sản phẩm cung ứng
+								span.material-icons expand_more
+							ul.list-sub-menu
+								li
+									a(href="") Bột giặt
+								li
+									a(href="") Nước giặt
+								li
+									a(href="") Nước xả vải
+								li
+									a(href="") Nước lau sàn
+								li
+									a(href="") Nước vệ sinh đa năng
+								li
+									a(href="") nước tẩy
+				li.nav-item
+					a.nav-link(href="co-dong.html") Quan hệ cổ đông
+			a.navbar-brand(href="index.html")
+				img(src="./assets/logo.png", alt="")
+			ul.navbar-nav.nav-right
+				li.nav-item
+					a.nav-link(href="tin-tuc.html") Truyền thông
+				li.nav-item
+					a.nav-link(href="nha-dau-tu.html") Nhà đầu tư
+				li.nav-item
+					a.nav-link(href="tuyen-dung.html") Cơ hội việc làm
+				li.nav-item
+					a.nav-link(href="lien-he.html") Liên hệ
+			.list-icons
+				.language
+					a(href="")
+						img(src="./assets/us.gif", alt="")
+					a(href="")
+						img(src="./assets/vn.gif", alt="")
+				.shopping
+					img(src="./assets/icons/add-shopping.png", alt="")
+				.search-icon
+					img(src="./assets/icons/search.png", alt="")
+				#search-box
+					.form-group
+						input(type="text" placeholder="Tìm sản phẩm...")
+						button.searchbutton.btn.btn__search
+							em.material-icons search
+			.main-nav
+				ul.nav-mobile
+				.kv-toggle
+					span
+					span
+					span
+					span
