--- a/src/_components/_layout/header.sass
+++ b/src/_components/_layout/header.sass
@@ -6,7 +6,6 @@
 	box-shadow: 0 0 6px rgba($color: #000000, $alpha: .3)
 	transition: all .3s ease-in-out
 	.navbar
-		max-width: 1330px
 		margin: 0 auto
 		.navbar-brand
 			padding: 0
@@ -29,10 +28,14 @@
 				height: 70px
 				top: 0
 				transition: all ease-in-out .5s
+		.nav-left
+			margin-left: -50px
+
 		.nav-right
 			margin-left: auto
 		.list-icons
 			margin-left: 20px
+			margin-right: -50px
 			display: flex
 			align-items: center
 			.language,
@@ -98,6 +101,8 @@
 						width: 30px
 						justify-content: center
 						color: #ffffff
+			@media screen and ( max-width: 1440px)
+				margin-left: 0
 		.nav-left,
 		.nav-right
 			.Module
@@ -307,8 +312,8 @@
 				display: flex
 				align-items: center
 				.navbar-brand
-					width: 70px
-					height: 70px
+					width: 60px
+					height: 60px
 					position: static
 					transform: unset
 					order: 1
