--- a/src/_components/banner/pages-banner.sass
+++ b/src/_components/banner/pages-banner.sass
@@ -3,10 +3,19 @@
 	.banner__pages
 		position: relative
 		width: 100%
-		img
+		.Module
+			height: 100%
+			width: 100%
+			.ModuleContent
+				width: 100%
+				height: 100%
+		.img
 			width: 100%
 			height: 100%
-			object-fit: cover
+			img
+				width: 100%
+				height: 100%
+				object-fit: cover
 		.content
 			position: absolute
 			top: 0
