--- a/src/_components/gioi-thieu/about-3.pug
+++ b/src/_components/gioi-thieu/about-3.pug
@@ -1,4 +1,4 @@
-section#about-3.kv-section
+section#about-3.kv-section(setBackground ='../assets/i1-bg.png')
 	.container
 		.caption
 			.title Tầm nhìn - Sứ mệnh
