--- a/src/_components/lien-he/lien-he.sass
+++ b/src/_components/lien-he/lien-he.sass
@@ -67,53 +67,52 @@
 		border-bottom-right-radius: 10px
 		box-shadow: 0 0px 20px -9px #a0b0c1
 		.frm-captcha
-			position: relative
-			display: flex
+			width: 100%
 			align-items: center
-			@media screen and ( max-width: 480px )
-				display: block
-			.RadCaptcha.RadCaptcha_Default
-				div
-					display: flex
-					align-items: center
+			display: flex
+			@media screen and ( max-width: 576px)
+				flex-direction: column
+				align-items: flex-start
+				.frm-captcha-input
+					margin-bottom: 15px
+				.frm-btnwrap
+					width: 100%
+					.frm-btn 
+						margin-left: 0
+				.RadCaptcha
 					div
-						display: flex
-						left: 100px
-						position: absolute
-						align-items: center
-						@media screen and ( max-width: 1200px )
-							left: 0
-						@media screen and ( max-width: 991px )
-							left: 37%
-						@media screen and ( max-width: 768px )
-							left: 0
-						@media screen and ( max-width: 480px )
-							position: relative
-			.rcRefreshImage
-				font-size: 0
-				position: relative
-				&::before
-					position: absolute
-					font-family: Material Icons
-					font-size: 30px
-					font-weight: 500
-					content: "replay"
-					color: #c10016
-					left: 0
-					top: 50%
-					transform: translateY(-50%)
+						flex-direction: row
 			.frm-captcha-input
-				display: flex
 				label
 					display: none
-				.input
-					position: absolute
-					right: -46%
-					top: 0
+				input
+					background-color: rgb(255, 255, 255)
+					width: 300px
 					height: 50px
-					width: 170px
-					@media screen and ( max-width: 480px )
-						width: 100%
+					box-shadow: 0 5px 15px 0 rgba(0,0,0,.15);
+					border: none
+					padding-left: 15px
+			.RadCaptcha
+				display: flex
+				div
+					display: flex
+					flex-direction: row-reverse
+				span 
+					display: none
+				.rcRefreshImage
+					width: 20px
+					margin: 0 13px
+					font-size: 0
+					position: relative
+					&::before
+						position: absolute
+						content: 'replay'
+						font-size: 30px
+						font-family: Material Icons
+			@media screen and ( max-width: 575.98px)
+				.RadCaptcha
+					div
+						flex-direction: row
 	input,textarea
 		font-size: 16px
 		line-height: 28px
