--- a/src/_components/nha-dau-tu/nha-dau-tu.pug
+++ b/src/_components/nha-dau-tu/nha-dau-tu.pug
@@ -12,8 +12,8 @@ section.kv-section.investor
 						img(src="./assets/nhadautu/item-3.png", alt="")
 					.content Top 100 thương hiệu - Nhãn hiệu Uy tín
 			.col-lg-3.col-md-6.col-sm-12
-				.investor-item.bg-blue
-					.img.border-radius-0
+				.investor-item
+					.img
 						img(src="./assets/nhadautu/item-2.png", alt="")
 					.content 7 danh mục sản phẩm
 			.col-lg-3.col-md-6.col-sm-12
