--- a/src/_components/nha-dau-tu/nha-dau-tu.sass
+++ b/src/_components/nha-dau-tu/nha-dau-tu.sass
@@ -93,6 +93,18 @@
 	[class*='col-']:nth-child(n+2) .investor-item
 		@media screen and ( max-width: 767px )
 			margin-top: 20px
+	.row
+		.col-lg-3
+			&:nth-child(3)
+				.investor-item
+					background-color: #0042b4
+					.img
+						text-align: center
+						img
+							border-radius: 0
+							width: 60%
+							height: 100%
+							object-fit: contain
 .investor-report
 	background-color: #fbf7ef
 	.reports
@@ -106,8 +118,6 @@
 		.report-item
 			display: flex
 			margin-bottom: 10px
-			@media screen and ( max-width: 991px )
-				justify-content: center
 			&:last-child
 				margin-bottom: 0
 			.material-icons
